<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4"
    tools:context=".ui.gallery.GalleryFragment">

    <EditText
        android:id="@+id/ed_B2"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_lenght_of_wall"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731" />

    <EditText
        android:id="@+id/ed_B3"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_hight_of_wall"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <EditText
        android:id="@+id/ed_B"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_length_of_blok"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <EditText
        android:id="@+id/ed_A"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_hight_of_blok"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <TextView
        android:id="@+id/resalt_text"
        android:layout_width="121dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/resalt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_A"
        app:layout_constraintEnd_toEndOf="@+id/ed_A"
        app:layout_constraintStart_toStartOf="@+id/ed_A" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:onClick="onClickResult"
        android:text="@string/Resalt"
        app:layout_constraintEnd_toEndOf="@+id/ed_B"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_B"
        app:layout_constraintTop_toBottomOf="@+id/ed_B" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="onClicReset"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_B"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_B"
        app:layout_constraintTop_toBottomOf="@+id/ed_B"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="51dp"
        android:background="@color/cardview_shadow_end_color"
        android:gravity="center_horizontal|center_vertical"
        android:singleLine="false"
        android:text="@string/Calculation_of_the_number_of_blocks_for_the_construction_of_the_wall"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="375dp"
        android:layout_height="298dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_5" />

</androidx.constraintlayout.widget.ConstraintLayout>