<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/ed_A"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_value_A"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <EditText
        android:id="@+id/ed_B"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Enter_value_B"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="onClicReset"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_B"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_B"
        app:layout_constraintTop_toBottomOf="@+id/ed_B"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="onClickResult"
        android:text="@string/Resalt"
        app:layout_constraintEnd_toEndOf="@+id/ed_B"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_B"
        app:layout_constraintTop_toBottomOf="@+id/ed_B" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="187dp"
        android:layout_height="33dp"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:singleLine="false"
        android:text='Вычислить "С"'
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/resalt_text"
        android:layout_width="121dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/resalt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_A"
        app:layout_constraintEnd_toEndOf="@+id/ed_A"
        app:layout_constraintStart_toStartOf="@+id/ed_A" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="262dp"
        android:layout_height="243dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>